Fazendo um Rafactory para Não Utilizar as classes do tipo Builder =(